Bug 411181 - F4 no longer moves keyboard focus to Konsole panel after it's been opened and closed at least once
Summary: F4 no longer moves keyboard focus to Konsole panel after it's been opened and...
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: kpart (other bugs)
Version First Reported In: 19.08.2
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords: usability
: 411655 411979 413101 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-08-22 16:27 UTC by David
Modified: 2019-11-02 15:17 UTC (History)
10 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 19.12.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David 2019-08-22 16:27:41 UTC
In previous versions if I launch dolphin, open some folder, and press F4 to get a console opened in that folder within Dolhpin, it used to automatically bring the focus to the console line, but in later versions, it will keep the focus on the folder files.

I think this is unreasonable as the reason why I open the console is to use it right there, and now it’s much more inconvenient. And what’s worse, if I hide the console and show it again, even if the focus was at the console before, it will again open unfocused, and thus whatever was written but not executed will be lost.

Steps to reproduce:
- Launch Dolphin
- Open some folder
- Press F4
- Try to type in the console without clicking it
- After unsuccessful attempt on that, click the console to focus it
- Write something in there
- Press F4 (console will hide)
- Press F4 again (console will reappear)

Expected behavior: should open with focus on the console, and whatever was written there but not executed should still be there when the console reopens.

Actual behavior: when the console is opened, focus is always on the folder view, and after hiding and reopening it, the command that was being typed is lost.
Comment 1 Nate Graham 2019-08-23 19:00:42 UTC
Can reproduce even with recent versions.
Comment 2 Nate Graham 2019-09-12 16:31:25 UTC
*** Bug 411655 has been marked as a duplicate of this bug. ***
Comment 3 Julian Steinmann 2019-09-16 18:26:22 UTC
*** Bug 411979 has been marked as a duplicate of this bug. ***
Comment 4 FancyZhang 2019-10-10 06:05:28 UTC
This bug also exists in 19.08.1
Comment 5 Nate Graham 2019-10-17 16:39:55 UTC
*** Bug 413101 has been marked as a duplicate of this bug. ***
Comment 6 Adwait Thattey 2019-10-23 18:39:35 UTC
In 19.11.70
The focus shifts to the terminal the first time f4 is pressed.

But if f4 is pressed to close it, and terminal is reopened by pressing f4, the focus remains in folder view. 

If the terminal is closed by exit (ctrl+D) and reopened using f4, focus shifts to terminal
Comment 7 Kurt Hindenburg 2019-11-02 15:17:37 UTC
Git commit bbdf27cc9fee4cf40e7f2551769445b2146ec20c by Kurt Hindenburg, on behalf of Alex Miranda.
Committed on 02/11/2019 at 15:17.
Pushed by hindenburg into branch 'master'.

Add missing setFocusProxy() call in ViewManager

Summary:
This should fix the terminal not gaining focus when using konsolepart.
FIXED-IN: 19.12.0

Test Plan:
- The terminal panels in Dolphin and Kate now always gain focus
properly, not just the first time you open them

Reviewers: #konsole, hindenburg

Reviewed By: #konsole, hindenburg

Subscribers: hindenburg, konsole-devel

Tags: #konsole

Differential Revision: https://phabricator.kde.org/D25001

M  +1    -0    src/ViewManager.cpp

https://invent.kde.org/kde/konsole/commit/bbdf27cc9fee4cf40e7f2551769445b2146ec20c
Comment 8 Kurt Hindenburg 2019-11-02 15:17:41 UTC
Git commit bbdf27cc9fee4cf40e7f2551769445b2146ec20c by Kurt Hindenburg, on behalf of Alex Miranda.
Committed on 02/11/2019 at 15:17.
Pushed by scmsync into branch 'master'.

Add missing setFocusProxy() call in ViewManager

Summary:
This should fix the terminal not gaining focus when using konsolepart.
FIXED-IN: 19.12.0

Test Plan:
- The terminal panels in Dolphin and Kate now always gain focus
properly, not just the first time you open them

Reviewers: #konsole, hindenburg

Reviewed By: #konsole, hindenburg

Subscribers: hindenburg, konsole-devel

Tags: #konsole

Differential Revision: https://phabricator.kde.org/D25001

M  +1    -0    src/ViewManager.cpp

https://commits.kde.org/konsole/bbdf27cc9fee4cf40e7f2551769445b2146ec20c