Add missing setFocusProxy() call in ViewManager

Summary:
This should fix the terminal not gaining focus when using konsolepart.

BUG: 411181
FIXED-IN: 19.12.0

Test Plan:
- The terminal panels in Dolphin and Kate now always gain focus
properly, not just the first time you open them

Reviewers: #konsole, hindenburg

Reviewed By: #konsole, hindenburg

Subscribers: hindenburg, konsole-devel

Tags: #konsole

Differential Revision: https://phabricator.kde.org/D25001